// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled icon-button-color-default root uui-theme-promo icon-button-color-gray60"
  onClick={[Function]}
  tabIndex={-1}
  type="button"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  />
</button>
`;

exports[`IconButton should be rendered correctly with props 1`] = `
<button
  aria-disabled={false}
  className="container uui-button-box uui-enabled -clickable icon-button-color-blue root uui-theme-promo icon-button-color-blue"
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;
